--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="canvas-container">
         <canvas>Your browser doesn't support canvas</canvas>
     </div>
+    <div id="restart"><button id = "restart1" onClick="window.location.reload();">Начать заново</button> </div>
 <script src="script.js"></script>
 </body>
 </html>
