--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width-device-width, initial-scale-1.0">
 </head>
 <body>
+    <div id="Game1" style="text-align: center; display: block;">
+    <input type = "button" onclick = "starts()" value = "Старт игры" >
+    </div>
     <div id="canvas-container">
-        <canvas>Your browser doesn't support canvas</canvas>
+        <canvas id="Gamess" style="display: none;">Your browser doesn't support canvas</canvas>
     </div>
     <div id="restart"><button id = "restart1" onClick="window.location.reload();">Начать заново</button> </div>
 <script src="script.js"></script>
+
 </body>
 </html>
