--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </style>
     <div class="t404">404</div>
     <div class="notfound">КУДА ТЫ ЖМАЛ? НЕТ ТАКОЙ СТРАНИЦЫ У НАС!<br>
-    <a href="https://mousearth.ru"> Перейти на главную страницу</a>
+    <a> Перейти на главную страницу</a>
     </div>
 
         <div id="canvas-container">
